# Project-2-Memory-Hierarchy-Simulator

./: CMakeLists.txt  FileManager.cpp  FileManager.h  Memory.h  README.md  Simulator.cpp  access_sequence.txt  cache.cpp  cache.h  cacheline.cpp  cacheline.h  cachline.cpp  data.txt  data2.txt  ins.txt  inst2.txt  main.cpp  memory.cpp  simulation_report.txt  simulator.h
